fixed log in log out issues, correct text displaying in each state

--- a/main.html
+++ b/main.html
@@ -14,7 +14,15 @@
 
 	<div class="feature">
 		<div class="tight-wrap">
+			<div class="preview">
+				<p>Login with Facebook.</p>
+				<p>For a boating haiku.</p>
+				<p>Chinamen Paris.</p>
+			</div>
 			{{> haiku}}
+			<div class="wait">
+				Please wait while Boydku stalks your Facebook profile...
+			</div>
 		</div>
 	</div>
 
